--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Gregg Hanano",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.13.1",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-router": "^2.0.0-rc5"
