--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.13.1",
     "react": "^15.1.0",
+    "react-addons-css-transition-group": "^15.3.0",
     "react-dom": "^15.1.0",
     "react-router": "^2.0.0-rc5"
   },
